--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
   </div>
 </div>
   
-  <footer><a href="https://www.gk.is-a.dev">ⓒ 2025 gk.is-a.dev ⚡</a></footer>
+  <footer><a href="https://gk.is-a.dev">ⓒ 2025 gk.is-a.dev ⚡</a></footer>
 
 
 <script>
@@ -609,5 +609,6 @@ function convertMarkdown() {
 <script src="https://cdn.jsdelivr.net/npm/js-md5@0.7.3/build/md5.min.js"></script>
 </body>
 </html>
+
 
 
